# arwi_workbooks

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  build_arwi_workbooks_docker.sh  env.py  pyproject.toml  start_arwi_workbooks_docker.sh
alembic_workbooks/: env.py
alembic_workbooks/versions/: 2025060315_add_custom_workbook_04578525b30b.py
arwi_workbooks/: models.py  workbooks_service.py
